--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "to-do-list",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon backend/index.js" ,
+    "start": "node backend/index.js"
   },
   "repository": {
     "type": "git",
