--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO = "mongodb+srv://Amaya:Amaya@to-do-list.yaidy.mongodb.net/To-Do-List?retryWrites=true&w=majority&appName=To-Do-List"
+MONGO = "mongodb+srv://Amaya:Amaya@to-do-list.yaidy.mongodb.net/Amaya?retryWrites=true&w=majority&appName=To-Do-List"
